objects/ObjectMergedHistory__c.object
<CustomObject>
    <fields>
        <fullName>From_ID__c</fullName>
        <label>From ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_ID__c</fullName>
        <label>To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Merge Record</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merge Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>